@@ -1,5 +1,9 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. вынес вызов getenv на уровень выше,зачем часто дергать системную функцию
+
+#Revision: 1570
+	#Author: ctapmex Date: 2010-10-13 23:25:14 +0600 (Ср, 13 окт 2010)
 	1. поиск модуля colorer_x64 на 64 битной системе
 	2. stack overflow из 1563 устранен для всех режимов фара (только win). Хак, но работает.
 
